<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/complex_title"
        android:text="@string/title"
        android:textSize="30sp" />
    <TextView
        android:paddingTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/show_matrix"
        android:id="@+id/complex_show"
        android:singleLine="false"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/complex_input"
        android:layout_gravity="center"
        android:inputType="numberSigned|numberDecimal"
        android:numeric="signed|decimal"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/complex_all_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_clear" />

        <Button
            android:id="@+id/complex_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/input" />

        <Button
            android:id="@+id/complex_back_space"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_space" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="40dp"
        android:text="@string/show_result_matrix"
        android:id="@+id/complex_result"
        android:singleLine="false"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equal"
        android:layout_gravity="center"
        android:id="@+id/complex_equal"/>
</LinearLayout>
</ScrollView>